--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odine Recipes</h1>
+    <ol>
+        <li><a href = "./recipes/beansAndRice.html">Beans and Rice</a></li>
+    </ol>
 </body>
 </html>
